--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <button type="button" data-action="start">Start</button>
-    <button type="button" data-action="stop">Stop</button>
+    <div class="btn">
+        <button type="button" data-action="start">Start</button>
+        <button type="button" data-action="stop">Stop</button>
+    </div>
     <script src="./main.js"></script>
 </body>
 
